--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -17,7 +17,11 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
-    - name: Change directory
+    - name: Install dependencies for react 
+      run: cd autoTest/react && npm install
+    - name: Install dependencies for puppeteer
+      run: cd autoTest/pptr && npm install
+    - name: Run react project
       run: cd autoTest/react && npm run start &
     - name: Run puppeteer
       run: cd autoTest/pptr && node node_modules/puppeteer/install.js && node index.js
