--- a/autoTest/react/package.json
+++ b/autoTest/react/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "version": "0.0.0",
   "scripts": {
-    "start": "vite --host",
+    "start": "vite --host --port 3030",
     "build": "tsc && vite build",
     "preview": "vite preview"
   },
