--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -24,4 +24,4 @@ jobs:
     - name: Run react project
       run: cd autoTest/react && npm run start &
     - name: Run puppeteer
-      run: cd autoTest/pptr && node node_modules/puppeteer/install.js && node index.js
+      run: cd autoTest/pptr && node node_modules/puppeteer/install.js && node index.js >> temp.txt
