Adding output check

--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -25,3 +25,5 @@ jobs:
       run: cd autoTest/react && npm run start &
     - name: Run puppeteer
       run: cd autoTest/pptr && node node_modules/puppeteer/install.js && node index.js >> temp.txt && cat temp.txt
+    - name: Check output
+      run: cd autoTest/pptr && grep "End Test Suite{{':'}} Result{{':'}} Failed" temp.txt && if [[ "$?" == 0 ]]; then echo success; else echo fail; fi
