--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -26,4 +26,5 @@ jobs:
     - name: Run puppeteer
       run: cd autoTest/pptr && node node_modules/puppeteer/install.js && node index.js >> temp.txt && cat temp.txt
     - name: Check output
+      shell: bash {0}
       run: cd autoTest/pptr && grep "End Test Suite:\ Result:\ Failed" temp.txt && if [[ "$?" == 0 ]]; then echo success; else echo fail; fi
