Updating Check output
The whole step fails if grep fails to find its pattern. I'm trying to keep it from failing so we can determine if the workflow should fail aftwerwards.

--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -27,4 +27,7 @@ jobs:
       run: cd autoTest/pptr && node node_modules/puppeteer/install.js && node index.js >> temp.txt && cat temp.txt
     - name: Check output
       shell: bash {0}
-      run: cd autoTest/pptr && grep "End Test Suite:\ Result:\ Failed" temp.txt && if [[ "$?" == 0 ]]; then echo success; else echo fail; fi
+      run: |
+        cd autoTest/pptr 
+        grep "End Test Suite:\ Result:\ Failed" temp.txt
+        if [[ "$?" == 0 ]]; then echo success; else echo fail; fi
