--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -30,4 +30,4 @@ jobs:
       run: |
         cd autoTest/pptr 
         grep "End Test Suite:\ Result:\ Failed" temp.txt
-        if [[ "$?" == 0 ]]; then echo success; else echo fail; fi
+        if [[ "$?" == 0 ]]; then exit 0; else exit 1; fi
